added comments, fixed mongo query searching in title instead of content, added pip requirements file

--- a/config.ini
+++ b/config.ini
@@ -1,6 +1,6 @@
 [MONGO]
-URI =mongodb://localhost:27017/
-User =mongo
-Password =mongo
+URI =mongodb+srv://scraper-cluster.tyxhy8b.mongodb.net/articles
+User =fact
+Password =DC8ZMck5fBEY5pTL
 Database =articles
 Collection =guardian_articles
